Fix field layout / spacing issues

--- a/src/components/04-forms/field-types/_form-fields.scss
+++ b/src/components/04-forms/field-types/_form-fields.scss
@@ -14,6 +14,12 @@
   outline: none;
 }
 
+// Layout
+
+.form-content {
+  @include contain-1090;
+}
+
 // Cross-browser consistency / bug fixes
 
 input::-webkit-outer-spin-button,
@@ -315,6 +321,10 @@ $rc-size: 3rem;
     padding-left: $rc-size + 0.75rem;
     margin-bottom: 1rem;
     min-height: $rc-size;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   input,
